[change]user showページのデザインを刷新

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -33,6 +33,7 @@ ja:
           attributes:
             current_password:
               blank: "が空になっています"
+              invalid: "が違います"
   users:
     confirmations:
       confirmed: メールアドレスが確認できました。
